Added trained marvin. Fixed bug in MLP and in ES

--- a/es_cartpole.ipynb
+++ b/es_cartpole.ipynb
@@ -26,7 +26,7 @@
     "    def predict(self, X):\n",
     "        out = X\n",
     "        for W, b in self.l:\n",
-    "            Z = X @ W.T + b.T\n",
+    "            Z = out @ W.T + b.T\n",
     "            out = np.tanh(Z)\n",
     "        if out.shape[0] == 1:\n",
     "            return out.item()\n",
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "-1.0"
       ]
      },
      "execution_count": 4,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
      "execution_count": 6,
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,10 @@
     "    done = False\n",
     "    i = 0\n",
     "    r_sum = 0\n",
-    "    while not done or (max_iter is not None and i < max_iter):\n",
+    "    while not done:\n",
+    "        if max_iter is not None and i >= max_iter:\n",
+    "            break\n",
+    "        \n",
     "        env.render()\n",
     "        observation, reward, done, _ = env.step(int(nn.predict(observation) > 0))\n",
     "        i += 1\n",
@@ -253,43 +256,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 9.0 0.5477225575051661\n",
-      "10 9.1 0.7681145747868608\n",
-      "20 9.15 0.5722761571129799\n",
-      "30 9.35 0.6538348415311012\n",
-      "40 8.95 0.6689544080129827\n",
-      "50 9.3 0.9539392014169455\n",
-      "60 9.1 0.8306623862918076\n",
-      "70 9.15 0.7262919523166976\n",
-      "80 9.15 0.6538348415311009\n",
-      "90 9.25 0.6224949798994366\n"
+      "0 9.8 0.7483314773547882\n",
+      "10 9.55 0.6689544080129824\n",
+      "20 11.0 4.219004621945797\n",
+      "30 11.0 3.96232255123179\n",
+      "40 687.15 444.1267020794854\n",
+      "50 1000.0 0.0\n"
      ]
     }
    ],
    "source": [
+    "np.random.seed(42)\n",
     "for i in range(100):\n",
     "    mean_rewards, std_rewards = generation_update(nn, env, population_size=20, sigma=0.1, lr=0.03, normalize_rewards=True)\n",
     "    if i % 10 == 0:\n",
     "        print(i, mean_rewards, std_rewards)\n",
-    "    if mean_rewards > 1000:\n",
+    "    if mean_rewards >= 1000:\n",
     "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode end after 8 iterations with reward = 8.0 and done status True\n"
+      "Episode end after 100 iterations with reward = 100.0 and done status False\n"
      ]
     }
    ],
    "source": [
-    "render_env(nn, env)"
+    "render_env(nn, env, max_iter=1000)"
    ]
   }
  ],
