Added ES Solvers and the main script

--- a/es_ray.ipynb
+++ b/es_ray.ipynb
@@ -83,10 +83,7 @@
     "    def get_weights(self, copy=False):\n",
     "        if copy:\n",
     "            return [np.copy(l) for l in self.weights]\n",
-    "        return self.weights\n",
-    "    \n",
-    "    def sample_like(self, sigma=1.0):\n",
-    "        return [np.random.randn(*l.shape) * sigma for l in self.weights]"
+    "        return self.weights"
    ]
   },
   {
